# lykn

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  go.mod  go.sum
api/: router.go  router_test.go
api/v1/: auth.go  dashboard.go  feature.go  handler_helpers.go  license.go  plan.go  project.go
backend/: .dockerignore  Dockerfile  Makefile  go.mod  go.sum
backend/api/: router.go  router_test.go
backend/config/: config.compose.yaml  config.go  config.yaml.example  config_test.go
backend/database/: db.go
backend/migrations/: 000001_init_schema.sql
cmd/demo/: main.go
cmd/server/: main.go
database/: db.go
deploy/nginx/: default.conf
frontend/: .env.example  .env.prod  .env.test  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  uno.config.ts  vite.config.ts
frontend/src/: App.vue  main.ts  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/lykn/: __init__.py  crypto.py  exceptions.py  hardware.py  schemas.py  validator.py
sdk/python/src/lykn/cli/: main.py
sdk/python/src/lykn/cli/commands/: hardware.py  inspect_cmd.py  pack.py  verify.py
sdk/python/src/lykn/contrib/: __init__.py  fastapi.py
sdk/python/src/lykn/pack/: __init__.py  config.py  engine.py  models.py  staging.py
sdk/python/tests/: test_cross_validation.py  test_crypto.py  test_fastapi.py  test_hardware.py  test_pack_config.py  test_pack_engine.py  test_pack_staging.py  test_schemas.py  test_validator.py
sdk/python/tests/test_cli/: test_commands.py  test_pack_command.py
(+182 files in other folders)
