[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lykn"
dynamic = ["version"]
description = "Python license validation SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "cryptography>=41.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "psutil>=5.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
pack = [
    "pyinstaller>=6.0",
    "nuitka>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "fastapi>=0.100",
    "httpx>=0.27",
]

[project.scripts]
lykn = "lykn.cli.main:cli"

[tool.hatch.version]
path = "src/lykn/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
